# nonebot-plugin-60s

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_60s/: __init__.py  config.py
